--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-create-conference-tutorial",
   "version": "1.0.0",
+  "license": "MIT",
   "dependencies": {
     "@freeclimb/sdk": "^1.0.0",
     "body-parser": "^1.19.0",
